--- a/new.mdx
+++ b/new.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Testing ISR'
 date: '2023-06-10'
+tags: ['next.js', 'nextjs', 'isr']
 ---
 
 Next.js has two forms of pre-rendering: **Static Generation** and **Server-side Rendering**. The difference is in **when** it generates the HTML for a page.
